# tine

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: cmake.yml  cpp-linter.yaml
cmake/: bin2c.cmake  bin2c.template.in
src/: main.cpp  tine_component.h  tine_engine.cpp  tine_engine.h  tine_log.h  tine_renderer.cpp  tine_renderer.h  tine_scene.cpp  tine_scene.h
src/assets/: boxTextured.gltf
